css and dashboard page

--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -5,16 +5,23 @@
 </head>
 <body>
     <header>
-        <h1>Dashboard</h1>
+        <h1>Your items</h1>
     </header>
     <section id="content">
-        <h2>Welcome to the Dashboard</h2>
-        <p>This is your dashboard content. You can customize this section with various widgets, charts, and data as needed.</p>
+        <div class="item">
+            <h2>Tv without controller</h2>
+            <img src="../../../assets/Tv_example.jpg" alt="Tv_example">
+        </div>
+        <div class="item">
+            <h2>Jacket size L</h2>
+            <img src="../../../assets/Jacket_example.jpg" alt="Jacket_example">
+        </div>
+        <div class="item">
+            <h2>Nintendo switch blue</h2>
+            <img src="../../../assets/switch_example.jpg" alt="switch_example">
+        </div>
     </section>
-
-    <footer>
-        <p>&copy; 2023 Your Company Name</p>
-    </footer>
 </body>
 </html>
+
 
