--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="jumbotron text-center">
     <h1>Mean Authentication app</h1>
     <p class="lead">welcome to our custom mean authentication app</p>
-    <div>
+    <div class="control">
+      <div class="button">
         <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
-        <a class="btn btn-default" [routerLink]="['/login']">Login</a> 
+    </div>
+    <div class="button">
+      <a class="btn btn-default" [routerLink]="['/login']">Login</a> 
+  </div>
     </div>
 </div>
 <div class="row">
