--- a/angular-src/src/app/components/dashboard/dashboard.component.css
+++ b/angular-src/src/app/components/dashboard/dashboard.component.css
@@ -1,42 +1,48 @@
-/* Reset default margin and padding */
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-header {
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+  }
+  
+  header {
     background-color: #7300ff;
-    color: #fff;
+    color: white;
     text-align: center;
-    padding: 10px;
-}
-
-header h1 {
-    margin-top: 10px;
-    font-size: 32px;
-}
-
-section#content {
-    max-width: 800px;
-    margin: 0 auto;
+    padding: 20px 0;
+  }
+  
+  h1 {
+    font-size: 24px;
+  }
+  
+  #content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    flex-grow: 1;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
+  }
+  
+  .item {
     text-align: center;
     padding: 10px;
-}
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: white;
+    margin: 10px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  
+  h2 {
+    font-size: 20px;
+    margin: 10px 0;
+  }
+  
+  img {
+    max-width: 100%;
+  }
+  
+  
+  
 
