--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -1,12 +1,18 @@
 .jumbotron {
     background-color: #7300ff;
     color: #fff;
-    padding: 50px;
-
+    padding: 20px;
   }
   .text-center{
     position: relative;
     text-align: center;
+  }
+
+  .jumbotron div.control{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
   }
   
   .jumbotron h1 {
@@ -20,7 +26,16 @@
   .jumbotron a.btn {
     margin-top: 20px;
     margin-right: 10px;
-    color: #ccc;
+    color: #7300ff;
+  }
+  .jumbotron div.button {  
+    text-align: center;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: white;
+    margin: 5px;
   }
   
   .row {
